--- a/KotaPalace/KotaPalace.csproj
+++ b/KotaPalace/KotaPalace.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Activities\SignUpBusiness.cs" />
     <Compile Include="Activities\SplashScreen.cs" />
     <Compile Include="Dialogs\BusinessAddressDialogFragment.cs" />
+    <Compile Include="Dialogs\ForgotPasswordDialogFragment.cs" />
+    <Compile Include="Dialogs\AddMenuDialogFragment.cs" />
+    <Compile Include="Dialogs\AddExtrasFragment.cs" />
     <Compile Include="Fragments\MenuFragment.cs" />
     <Compile Include="Fragments\OrdersFragment.cs" />
     <Compile Include="Fragments\PrepareOrderFragmentTab.cs" />
@@ -87,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\map_style.json" />
+    <None Include="google-services.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
@@ -129,6 +133,9 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Plugin.FirebaseStorage">
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="System.Collections.NonGeneric">
       <Version>4.3.0</Version>
@@ -306,6 +313,21 @@
   <ItemGroup>
     <AndroidResource Include="Resources\layout\activity_sign_up.xml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_reset_password.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_add_menu.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\fragment_add_extras.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
