--- a/KotaPalace/KotaPalace.csproj
+++ b/KotaPalace/KotaPalace.csproj
@@ -146,6 +146,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.CloudFirestore">
+      <Version>4.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.FirebaseStorage">
       <Version>4.1.0</Version>
     </PackageReference>
